docs/modules/setup/examples/k8s/bpmn-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: bpmn
  name: bpmn
spec:
  ports:
  - name: "8003"
    port: 8003
    targetPort: 8003
  selector:
    app: bpmn
