docs/modules/setup/examples/k8s/kroki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kroki
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kroki
            port:
              number: 8000
